# supplyshield

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.crons  Dockerfile.daemon  Makefile  README.rst  alembic.ini  docker-compose.yml  init.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: coverage.yml  linting.yml
docs/: api.rst  architecture.rst  configuration.rst  cron.rst  daemon.rst  deployment.rst  index.rst  installation.rst  introduction.rst  scancodeio_contract.md  troubleshooting.rst
docs/superpowers/plans/: 2026-05-24-post-audit-remediation-plan.md
etc/initdb/: init.sql
etc/scripts/: create_packagedb.py  metabase_cron.sh
libinv/: __init__.py  base.py  conftest.py  cron_scheduler.py  deployment_provider.py  env.py  helpers.py  jira_integration.py  logger.py  main.py  models.py  scio_models.py  sqs.py  vcs.py
libinv/api/: actionable.py  app.py  auth.py  compare_builds.py  deps.py  graph.py  health.py  metrics.py  onboard_package.py  package.py  request_id.py  wasp.py
libinv/api/actionable/: __init__.py  _common.py  dashboards.py  package_details.py  package_scan.py  repositories.py  statistics.py
libinv/api/actionable/queries/: __init__.py  package_details.py  repository_listing.py
libinv/api/static/: actionables-dashboard.css  repositories-listing.css  repositories-listing.js  style.css
libinv/api/templates/: actionables_dashboard.html  actionables_index.html  compare_builds.html  onboard_package.html  package_details.html  package_scan.html  repositories_listing.html  reverse_deps.html  sca_scan_form.html  statistics.html  validate_report.html
libinv/api/templates/includes/: footer.html  head.html  navbar.html
libinv/blast_radius/: cdx.py
libinv/cli/: __init__.py  actionable.py  bridge.py  checkpoint.py  cli.py  daemon.py  epss.py  import_and_improve_from_metapod.py  process_message.py  query.py  scan_all_packages.py  scan_stage_ecr_image.py  secbugs.py  sync_service_status.py  update_all_images_with_base_image.py
libinv/models/: __init__.py  _base.py  _legacy.py  actionable.py  epss.py  image.py  package.py  repository.py  sast.py  secbug.py  vulnerability.py  wasp.py
libinv/scanners/image_scanner/: base_image.py  ecr.py  image_index.py  sbom.py  sca.py  scanner.py
libinv/scanners/repository_scanner/: bridge.py  cdx_scanner.py  scancodeio.py
libinv/scanners/repository_scanner/sast/: SarifResult.py
libinv/scanners/repository_scanner/sast/semgrep/: Config.py  SemgrepRunner.py  semgrep.py  utils.py
libinv/scripts/: deployment_status.py
libinv/services/: __init__.py  issue_reporter.py  scancodeio_client.py
libinv/services/epss/: __init__.py  all_actionable_cves.py  calculate_package_epss.py  prune.py
libinv/services/scancodeio/: __init__.py  dtos.py  endpoints.py  transport.py
tests/: conftest.py  test_api_routes.py  test_auth.py  test_cli_checkpoint.py  test_cli_daemon.py  test_cli_request_id_env.py  test_compare_builds_scio.py  test_cron_correlation_id.py  test_daemon_shutdown.py  test_ecr.py  test_env_parsing.py  test_epss_scio_http_path.py  test_health_endpoints.py  test_helpers.py  test_issue_reporter.py  test_metrics_endpoint.py  test_models_scio_http_path.py  test_package_details_scio_http_path.py  test_request_id.py  test_sarif_findings_metrics.py  test_sarif_result.py  test_scan_metrics.py  test_scancodeio_client.py  test_secbug_is_active.py  test_semgrep_runner.py  test_services_epss_all_actionable_cves.py  test_services_epss_calculate_package_epss.py  test_session_scope.py  test_vcs.py  test_vulnerability_severities_epss.py  test_vulnerability_severities_http.py  test_wasp_exit.py
tests/integration/: conftest.py  test_actionable_populate_bulk.py  test_alembic_migrations.py  test_cli_bridge_connect.py  test_cli_import_and_improve.py  test_e2e_sqs_daemon_api.py  test_epss_collect_cves_bulk.py  test_epss_prune.py  test_epss_upsert.py  test_mark_latest_version.py  test_n1_eager_loading.py  test_repositories_route_behavioral.py  test_repository_raise_sca_issues.py  test_session_scope.py  test_statistics.py  test_strict_lazy_hook.py  test_wasp_eat_caterpillar.py
tests/unit/: test_cron_scheduler_no_shell.py  test_cron_scheduler_shutdown.py
