[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Sprint 54.3: canonical project metadata + dependency declaration.
# Migrated from setup.cfg ([metadata] + [options]). setup.cfg is now deleted —
# setuptools >=61 reads [project] from pyproject.toml as the source of truth.
# Version ranges (NOT pins) live here; requirements.txt remains the
# operator-facing pinned lockfile for reproducible deployments.
[project]
name = "libinv"
version = "0.0.1"
description = "SupplyShield is an open-source application security orchestration framework designed to secure your software supply chain from vulnerabilities, malicious dependencies, and unapproved base images. It provides a comprehensive solution to automate the detection, prioritization, and resolution of security issues in your open-source dependencies and containerized applications."
authors = [
    {name = "Hritik Vijay", email = "hrtk@duck.com"},
]
keywords = ["sca", "sbom"]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "attrs",
    "black",
    "boto3",
    "docker",
    "Flask",
    "Flask-SQLAlchemy",
    "immutabledict",
    "isort",
    "packaging",
    "pylint",
    "ruff",
    "requests",
    "SQLAlchemy>=2.0.0",
    "tqdm",
    "click",
    "GitPython",
    "semgrep==1.163.0",
    "javalang",
    "jira==3.10.5",
    "python-dotenv>=1.0.0",
    "psycopg2-binary",
    "networkx",
    "pyvis",
    "prettytable",
    "gunicorn",
    "packageurl-python",
    "schedule",
    "sphinx",
    "cryptography",
    "pyjwt",
    "univers",
    "jsonschema",
]

[project.optional-dependencies]
DEV = [
    "pytest>=8.3.3",
    "coverage>=7.6.4",
]

[project.scripts]
libinv = "libinv.cli.cli:cli"

[tool.setuptools.packages.find]
include = ["libinv*"]

[tool.black]
line-length = 100
include = '\.pyi?$'
#skip_gitignore = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
   ^/venv/.*
   | ^/alembic/.*
)
'''

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true
skip = ["venv", "scans", "alembic"]

[tool.ruff]
line-length = 100
exclude = [
    "alembic/*"
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Sprint 16: gradual typing — scoped to recently-restructured public APIs only.
# Sprint 17 will broaden coverage and wire mypy into CI. Configuration lives
# here (not mypy.ini) so all tool config sits in pyproject.toml.
#
# ``follow_imports = silent`` is the gradual-typing escape hatch: mypy still
# resolves the imports in libinv/base.py / libinv/services/ (so it can use
# their stubs), but it does NOT emit errors for modules outside ``files``.
# This is the only way ``files = [...]`` actually limits the report.
[tool.mypy]
python_version = "3.12"
files = [
    "libinv/base.py",
    "libinv/models.py",
    "libinv/services",
    "libinv/api",
    "libinv/scanners",
    "libinv/cli",
]
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
no_implicit_optional = true
# ``import-untyped`` fires for installed packages without stubs (e.g. requests
# without types-requests). ``ignore_missing_imports`` only silences
# ``import-not-found``; suppressing the untyped variant keeps the report
# focused on actual type bugs in libinv code until Sprint 17 decides whether
# to add stub packages.
disable_error_code = ["import-untyped"]

# Sprint 17: models.py has Sprint-0-16 public-API annotations on a handful of
# methods, but the rest of the file is still untyped. We include it in
# ``files`` so newly-added hints are checked, but silence the noisiest
# categories that fire on legacy untyped surfaces (SQLAlchemy declarative
# attributes, dynamically-assigned ``self._session``, etc). When Sprint 18+
# broadens coverage, remove entries from ``disable_error_code`` here.
# Sprint 39.1: models.py was split into a libinv/models/ package — the
# override pattern now uses ``libinv.models.*`` (wildcard) so the same
# legacy-error suppressions apply to every submodule (_legacy.py,
# image.py, and the upcoming package.py / vulnerability.py / …).
[[tool.mypy.overrides]]
module = ["libinv.models", "libinv.models.*"]
disallow_untyped_defs = false
disable_error_code = ["return-value", "assignment", "var-annotated", "attr-defined", "misc"]

# Sprint 18: expand scope to libinv/api and libinv/scanners. These packages are
# largely untyped today; we run mypy over them to catch *future* regressions but
# silence the noisy categories that fire on existing legacy surfaces (SQLAlchemy
# Column typing leaks, untyped yield/return slots, dynamic attrs, etc).
# Sprint 19+ should peel categories off this list as files are annotated.
[[tool.mypy.overrides]]
module = ["libinv.api.*", "libinv.scanners.*", "libinv.cli.*"]
disallow_untyped_defs = false
disable_error_code = [
    "return-value",
    "assignment",
    "var-annotated",
    "attr-defined",
    "arg-type",
]
