[metadata]
name = libinv
version = 0.0.1
author = Hritik Vijay
author_email = hrtk@duck.com
description = SupplyShield is an open-source application security orchestration framework designed to secure your software supply chain from vulnerabilities, malicious dependencies, and unapproved base images. It provides a comprehensive solution to automate the detection, prioritization, and resolution of security issues in your open-source dependencies and containerized applications.
keywords = sca, sbom
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
python_requires = >=3.12
install_requires =
    alembic
    attrs
    black
    boto3
    docker
    Flask
    Flask-SQLAlchemy
    immutabledict
    isort
    packaging
    pylint
    ruff
    requests
    SQLAlchemy >= 2.0.0
    tqdm
    click
    GitPython
    semgrep == 1.102.0
    javalang
    jira == 3.10.5
    python-dotenv >= 1.0.0
    psycopg2-binary
    networkx
    pyvis
    prettytable
    gunicorn
    packageurl-python
    schedule
    sphinx
    cryptography
    pyjwt
    univers
    jsonschema
packages = find:

[options.extras_require]
DEV =
    pytest >= 8.3.3
    coverage >= 7.6.4

[options.entry_points]
console_scripts =
    libinv = libinv.cli.cli:cli
